<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.PassAuth">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_traveller_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/futura2"
        android:gravity="center|start"
        android:text="@string/Enter_your_mobile_number"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintHeight_min="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />



    <LinearLayout

        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/futura2"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.84">

        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/country_text_color"
            android:fontFamily="@font/futura2"
            android:gravity="center"
            android:text="@string/post_code" />

        <EditText

            android:layout_width="0dp"
            android:id="@+id/input_phone"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/edit_text_color"
            android:backgroundTintMode="src_over"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="12"
            android:paddingLeft="10dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/helper_text"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:gravity="bottom"
        android:textColor="#FF9300"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


        <TextView
            android:visibility="visible"
            android:id="@+id/helper_text_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/helper_phone_number"
            android:textColor="#FF9300"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_min="295dp"
        app:layout_constraintEnd_toEndOf="@+id/helper_text"
        app:layout_constraintStart_toStartOf="@+id/helper_text"
        app:layout_constraintTop_toBottomOf="@+id/helper_text">

        <LinearLayout

            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/futura2"
                android:gravity="bottom"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:text="@string/user_terms_text1" />

            <TextView
                android:fontFamily="@font/futura2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/text_span"
                android:gravity="bottom"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"

                android:text="@string/user_terms_text2" />

            <TextView
                android:fontFamily="@font/futura2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:gravity="bottom"
                android:text="@string/user_terms_text3" />

            <TextView
                android:fontFamily="@font/futura2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:gravity="bottom"
                android:textColor="@color/text_span"
                android:text="@string/user_terms_text4" />


        </LinearLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/futura2"
            android:gravity="top|center"
            android:text="@string/user_terms_text5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout8"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="60dp"
        app:layout_constraintHeight_min="20dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/btn_traveller_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        android:background="@color/btn_color1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:fontFamily="@font/futura2"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="10dp"
            android:background="@drawable/arrow_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>