<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LaunchScreen">


    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="21dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/chaptan_icon" />


    </LinearLayout>

    <TextView

        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/futura2"
        app:layout_constraintHeight_min="50dp"
        android:text="@string/launch_message"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:orientation="horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_traveller"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.9"
        android:fontFamily="@font/futura2"
        android:background="@color/btn_color1"
        android:text="@string/Traller"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_traveller" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_driver"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/btn_color2"
        android:fontFamily="@font/futura2"
        android:text="@string/Driver"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_driver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>